--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 		function navigate(id) {
 
 			if (id == 'timetable')
-				window.open("https://www.notion.so/kcr7courses/COLLEGE-Study-Scheduler-baa0b442763842abb0d80f89cbb43529?pvs=4#f473753ee80642f7992bcaa7fe8352bb", '_blank').focus();
+				window.open("https://www.notion.so/kcr7courses/GNED-1413-General-Education-Current-Affairs-Becoming-the-Change-38d1ac42e4384ddfb55483613f5d459c?pvs=4", '_blank').focus();
 			
 		}
 	</script>
