--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 
         body{
+            Font-family: Lucida Sans, Helvetica, Arial, sans-serif;
             font-variant-caps: all-petite-caps;
 
 
@@ -37,12 +38,12 @@
 
         .date {
       
-            font-family: monospace;
+            Font-family: Lucida Sans, Helvetica, Arial, sans-serif;
             font-size: 2em;
         }
 
         .clock {
-            font-family: monospace;
+            Font-family: Lucida Sans, Helvetica, Arial, sans-serif;
             font-size: 2em;
         }
 
@@ -95,7 +96,7 @@
 
 function dispalyGreetings(today){
         hrs = today.getHours();
-        name="Mark"
+        name="Munaiz"
         if (hrs < 12)
             greet = 'Good Morning  '+name;
         else if (hrs >= 12 && hrs <= 17)
