--- a/index.html
+++ b/index.html
@@ -10,24 +10,24 @@
 
 
         body{
-            Font-family: Lucida Sans, Helvetica, Arial, sans-serif;
             font-variant-caps: all-petite-caps;
+            color: #ffffff;
 
 
         }
 
         .widget {
             padding: 5px 5px ;
-            color: #000000;
+            color: #ffffff;
             display: flex;
             justify-content:center;
             align-items:center;
             flex-direction: column;
             max-width: 95%;
             margin: auto;
-            border: 3px solid #000000;
+            border: 3px solid #ffffff;
             border-radius: 5px;
-            box-shadow: 2px 2px 1px 0px #000000;
+            box-shadow: 2px 2px 1px 0px #ffffff;
 
         }
 
@@ -38,12 +38,12 @@
 
         .date {
       
-            Font-family: Lucida Sans, Helvetica, Arial, sans-serif;
+            font-family: monospace;
             font-size: 2em;
         }
 
         .clock {
-            Font-family: Lucida Sans, Helvetica, Arial, sans-serif;
+            font-family: monospace;
             font-size: 2em;
         }
 
